syntax = "proto3";

package todo;

option go_package = "proto/pb";

service TodoService {
    rpc CreateTodo (Todo) returns (TodoResponse);
    rpc GetTodo (TodoRequest) returns (Todo);
    rpc ListTodos (Empty) returns (Todos);
}

message Todo {
    int32 id = 1;
    string title = 2;
    string description = 3;
}

message TodoRequest {
    int32 id = 1;
}

message Todos {
    repeated Todo todos = 1;
}

message TodoResponse {
    string message = 1;
}

message Empty {}